--- a/application/mobile/view/article/details.html
+++ b/application/mobile/view/article/details.html
@@ -19,7 +19,7 @@
                     <img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
                 </p>
                 
-                <span>{$info.title}</span>
+                <span class="publicEllipsis" style="display:inline-block;width:80%;">{$info.title}</span>
             </div>
             
             <!-- 详情 -->
