--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -1,3 +1,6 @@
+<style>
+.footer img{width:100px;height:100px;}
+</style>
 <div class="inner-wrap">
     <div class="left fl">
         <div class="bottomNav">
