--- a/application/index/view/index/online_import_data.html
+++ b/application/index/view/index/online_import_data.html
@@ -240,7 +240,7 @@
         function success(msg){
             layer.msg(msg,{icon:6});
             setTimeout(function(){
-                window.location.replace(location.href);
+                window.location.replace("{:url('gene/index')}");
             },1500);
             sub = 1;
         }
