--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -4,7 +4,7 @@
     </div>
     <div class="nav">
         <ul>
-                <li><a href="/index/index/index">基因寻祖</a></li>
+                <li><a href="/index/index/index">DNA寻祖</a></li>
                 <li><a href="/index/gene/index">我的基因</a></li>
                 <!-- <li><a href="/index/index/my_information">我的基因</a></li>  -->
                 <li><a href="/index/buy/buy">购买</a></li>
