--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -94,7 +94,10 @@
 
 						</div>
 
+						<div style="text-align: center;background: #BCEAFF;height: 160px;border-radius: 10px;position: relative;margin-top: 30px;">
+							我的订单
 
+						</div>
 
 
 
@@ -108,6 +111,7 @@
 
 
 		</div>
+		<div class="clear"></div>
 		<div class="footer">{include file="footer"}</div>
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
 		<!-- <script src="__STATIC__/js/public/header.js"></script> -->
