--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -108,6 +108,7 @@
 
 
 		</div>
+		<div style="text-align: center;padding-bottom: 40px;cursor: pointer;font-size: 28px;">点击查看订单</div>
 		<div class="footer">{include file="footer"}</div>
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
 		<!-- <script src="__STATIC__/js/public/header.js"></script> -->
