--- a/application/mobile/view/user/import_online.html
+++ b/application/mobile/view/user/import_online.html
@@ -88,13 +88,13 @@
 							<li><input type="text" name="gene[DYS19]" value='{:session("gene[DYS19]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
-							<li>DYS449</li>
-							<li>DYS456</li>
+							<li>DYS385a</li>
+							<li>DYS385b</li>
 							<li>DYS389a</li>
 						</ul>
 						<ul class="xiala">
-							<li><input type="text" name="gene[DYS449]" value='{:session("gene[DYS385a]","","mobile")}' /></li>
-							<li><input type="text" name="gene[DYS456]" value='{:session("gene[DYS456]","","mobile")}' /></li>
+							<li><input type="text" name="gene[DYS385a]" value='{:session("gene[DYS385a]","","mobile")}' /></li>
+							<li><input type="text" name="gene[DYS385b]" value='{:session("gene[DYS385b]","","mobile")}' /></li>
 							<li><input type="text" name="gene[DYS389a]" value='{:session("gene[DYS389a]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
