--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -10,7 +10,7 @@
                 <li><a href="/index/buy/buy">购买</a></li>
                 <li><a href="/index/referral/referral">寻根故事</a></li>
                 <!-- <li><a href="/index/buy/my_order">我的订单</a></li> -->
-                <li><a href="/index/buy/my_order">帮助中心</a></li>
+                <li><a href="{:url('article/details','',false)}?id=34">帮助中心</a></li>
                 <li><a href="/index/about/index">关于我们</a></li>
         </ul>
     </div>
