--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -93,15 +93,6 @@
 							</div>
 
 						</div>
-
-						<div style="text-align: center;background: #BCEAFF;height: 160px;border-radius: 10px;position: relative;margin-top: 30px;">
-							我的订单
-
-						</div>
-
-
-
-
 					</div>
 				</div>
 
@@ -111,7 +102,7 @@
 
 
 		</div>
-		<div style="text-align: center;padding-bottom: 40px;cursor: pointer;font-size: 28px;">点击查看订单</div>
+		<div style="text-align: center;padding-bottom: 40px;cursor: pointer;font-size: 28px;"><a href="{:url('buy/my_order')}">点击查看订单</a></div>
 		<div class="footer">{include file="footer"}</div>
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
 		<!-- <script src="__STATIC__/js/public/header.js"></script> -->
