--- a/application/mobile/view/user/import_online.html
+++ b/application/mobile/view/user/import_online.html
@@ -202,9 +202,9 @@
           </div> 
           <button class="save" type="submit" style="margin-left:35%;">提交保存</button>
           </form>
-		<!--<iframe name="ajaxR" style="display:block;width:100%;height:500px;"></iframe>-->
+		<iframe name="ajaxR" style="display:block;width:100%;height:500px;"></iframe>
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.js"></script>
-        <script type="text/javascript" src="__STATIC__/js/public/public.js"></script>
+        <!-- <script type="text/javascript" src="__STATIC__/js/public/public.js"></script> -->
         <script type="text/javascript" src="/public/static/public/layer/layer.js"></script>
 		<script>
 		
