--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -18,7 +18,7 @@
         <div class="login-in">
             {if condition="$user"}
                 <span class="fl" onclick="javascript:location.href='/index/user/index'">
-                    <img src="{$user.avatar}"" class="touxiang">
+                    <img src="{$user.avatar}" style="margin-top:0px;" class="touxiang">
                 </span>
                 <a class="outBtn fl" href="/index/login/logout">退出</a>
             {else /}
