--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -5,27 +5,56 @@
     <div class="left fl">
         <div class="bottomNav">
             <ul>
-                    <li><a href="#">首页</a></li>
-                    <li><a href="#">关于族内</a></li>
-                    <li><a href="#">关注</a></li>
-                    <li><a href="#">DNA寻祖</a></li>
-                    <li><a href="#">关于我们</a></li>
+                    <!--<li><a href="#" style="color: #4bb4fa;">首页</a></li>
+                    <li><a href="#" style="color: #4bb4fa;">关于族内</a></li>
+                    <li><a href="#" style="color: #4bb4fa;">关注/联系</a></li>
                     <li><a href="#">寻根故事</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">DNA寻祖</a></li>
                     <li><a href="#">加入我们</a></li>
+                    <li><a href="#">帮助中心</a></li>
                     <li><a href="#">联系邮箱</a></li>
                     <li><a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a></li>
-                    <li><a href="#">顾问委员会</a></li>
-                    <li><a href="#">帮助中心</a></li>
+                    <li><a href="#">族内商城</a></li>
                     <li><a href="#">联系电话</a></li>
-                    <li><a href="#">购买</a></li>
-                    <li><a target="_blank" href="{:url('article/details','',false)}?id=32">隐私保护</a></li>
-                    <li><a href="#">个人中心</a></li>
+					<li><a href="#">顾问委员会</a></li>
+					 <li><a href="#">个人中心</a></li>
+                    <li><a target="_blank" href="{:url('article/details','',false)}?id=32">隐私保护</a></li>-->
+                   <li>
+                   	<a href="#" style="color: #4bb4fa;">首页</a>
+                   	<a href="#">NA寻祖</a>
+                   	<a href="#">寻根故事</a>
+                   	<a href="#">帮助中心</a>
+                   	<a href="#">族内商城</a>
+                   	<a href="#">个人中心</a>
+                   </li>
+                   <li>
+                   	<a href="#" style="color: #4bb4fa;">关于族内</a>
+                   	<a href="#">关于我们</a>
+                   	<a href="#">加入我们</a>
+                   	<a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>
+                   	<a href="#">顾问委员会</a>
+                   	<a target="_blank" href="{:url('article/details','',false)}?id=32">隐私保护</a>
+                   </li>
+                   <li>
+                   	<a href="#" style="color: #4bb4fa;">关注/联系</a>
+                   	<a href="#">联系电话</a>
+                   	<a href="#">联系邮箱</a>
+                   </li>
+                   
+                   
+                   
+                   
+                   
+                   
+                   
                   
             </ul>
         </div>
         <div class="copyright">
             <span>@2019族内myroots.All Rights Reserved &nbsp;&nbsp;粤ICP备15012185号<img src="__STATIC__/images/home/jing.png"/></span>
-           
+            <p>大美基因科技(广东)有限公司</p>
+            
             <!-- <p class="hao">{$web_setting.icp}</p> -->
             
         </div>
