--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -7,7 +7,7 @@
                 <li><a href="/index/index/index">DNA寻祖</a></li>
                 <li><a href="/index/gene/index">我的基因</a></li>
                 <!-- <li><a href="/index/index/my_information">我的基因</a></li>  -->
-                <li><a href="/index/buy/buy">购买</a></li>
+                <li><a href="/index/buy/buy">族内商城</a></li>
                 <li><a href="/index/referral/referral">寻根故事</a></li>
                 <!-- <li><a href="/index/buy/my_order">我的订单</a></li> -->
                 <li><a href="/index/buy/my_order">帮助中心</a></li>
