--- a/application/mobile/view/user/import_online.html
+++ b/application/mobile/view/user/import_online.html
@@ -41,27 +41,27 @@
                 </p>
                 <p class="person_message">
                 	<label>现居地:</label>
-                	<span><input type="text" name="gene[region]" value='{:session("gene[region]","","mobile")}' /></span>
+                	<span><input type="text" name="gene[on_addr]" value='{:session("gene[on_addr]","","mobile")}' /></span>
                 </p>
                  <p class="person_message">
                 	<label>祖籍地:</label>
-                	<span><input type="text" name="gene[region]" value='' /></span>
+                	<span><input type="text" name="gene[addr_log]" value='{:session("gene[addr_log]","","mobile")}' /></span>
                 </p>
                  <p class="person_message">
                 	<label>派字:</label>
-                	<span><input type="text" name="gene[region]" value='' /></span>
+                	<span><input type="text" name="gene[pai]" value='{:session("gene[pai]","","mobile")}' /></span>
                 </p>
                  <p class="person_message">
                 	<label>是否拥有家谱:</label>
-                	<span><input type="text" name="gene[region]" value='' /></span>
+                	<span><input type="text" name="gene[is_family_tree]" value='{:session("gene[is_family_tree]","","mobile")}' /></span>
                 </p>
                 <p class="person_message">
                 	<label>迁移记录:</label>
-                	<span><input type="text" name="migration" /></span>
+                	<span><input type="text" name="gene[migration]" value='{:session("gene[migration]","","mobile")}' /></span>
                 </p>
                 <p class="person_message">
                 	<label>其他说明:</label>
-                	<span><input type="text" name="desc"/></span>
+                	<span><input type="text" name="gene[desc]" value='{:session("gene[desc]","","mobile")}' /></span>
                 </p>
               
                 <div class="l3h51" >
