--- a/application/index/view/index/online_import_data.html
+++ b/application/index/view/index/online_import_data.html
@@ -31,12 +31,55 @@
 							
 						</ul>
 						<ul class="xiala ">
-							
 							<li style="width: 100%;font-size: 20px;">
-								<input type="text" placeholder="请输入您的姓名" name="name" style="color: #AEAEAE;"/>
+								<input type="text" placeholder="请输入您的姓名" name="info[name]" style="color: #AEAEAE;"/>
 							</li>
-							
-						</ul>
+                        </ul>
+                        <ul class="xiala ">
+                            <li style="width: 100%;font-size: 20px;">
+                                <input type="text" placeholder="请输入联系电话" name="info[mobile]" style="color: #AEAEAE;"/>
+                            </li>
+                        </ul>
+                        <ul class="xiala ">
+                            <li style="width: 100%;font-size: 20px;">
+                                <input type="text" placeholder="请输入民族" name="info[nation]" style="color: #AEAEAE;"/>
+                            </li>
+                        </ul>
+                        <ul class="xiala ">
+                            <li style="width: 100%;font-size: 20px;">
+                                <input type="text" placeholder="请输入性别" name="info[sex]" style="color: #AEAEAE;"/>
+                            </li>
+                        </ul>
+                        <ul class="xiala ">
+                            <li style="width: 100%;font-size: 20px;">
+                                <input type="text" placeholder="请输入现居地" name="info[on_addr]" style="color: #AEAEAE;"/>
+                            </li>
+                        </ul>
+                        <ul class="xiala ">
+                            <li style="width: 100%;font-size: 20px;">
+                                <input type="text" placeholder="请输入祖籍地" name="info[addr_log]" style="color: #AEAEAE;"/>
+                            </li>
+                        </ul>
+                        <ul class="xiala ">
+                            <li style="width: 100%;font-size: 20px;">
+                                <input type="text" placeholder="请输入派字" name="info[pai]" style="color: #AEAEAE;"/>
+                            </li>
+                        </ul>
+                        <ul class="xiala ">
+                            <li style="width: 100%;font-size: 20px;">
+                                <input type="text" placeholder="是否拥有家谱" name="info[is_family_tree]" style="color: #AEAEAE;"/>
+                            </li>
+                        </ul>
+                        <ul class="xiala ">
+                            <li style="width: 100%;font-size: 20px;">
+                                <input type="text" placeholder="请输入迁移记录" name="info[migration]" style="color: #AEAEAE;"/>
+                            </li>
+                        </ul>
+                        <ul class="xiala ">
+                            <li style="width: 100%;font-size: 20px;">
+                                <input type="text" placeholder="请输入其他说明" name="info[desc]" style="color: #AEAEAE;"/>
+                            </li>
+                        </ul>
 						
 						<ul class="xiala ">
 							
@@ -226,7 +269,6 @@
                 return false;
             }
             
-            sub = 0;
 
             $('#form').submit();
             
