--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -22,14 +22,14 @@
                     <li><a target="_blank" href="{:url('article/details','',false)}?id=32">隐私保护</a></li>-->
                    <li>
                    	<a href="#" style="color: #4bb4fa;">首页</a>
-                   	<a href="#">NA寻祖</a>
+                   	<a href="#">DNA寻祖</a>
                    	<a href="#">寻根故事</a>
                    	<a href="#">帮助中心</a>
                    	<a href="#">族内商城</a>
                    	<a href="#">个人中心</a>
                    </li>
                    <li>
-                   	<a href="#" style="color: #4bb4fa;">关于族内</a>
+                   	<a href="#" style="color: #4bb4fa;">族内</a>
                    	<a href="#">关于我们</a>
                    	<a href="#">加入我们</a>
                    	<a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>
@@ -37,9 +37,9 @@
                    	<a target="_blank" href="{:url('article/details','',false)}?id=32">隐私保护</a>
                    </li>
                    <li>
-                   	<a href="#" style="color: #4bb4fa;">关注/联系</a>
-                   	<a href="#">联系电话</a>
-                   	<a href="#">联系邮箱</a>
+                   	<a href="#" style="color: #4bb4fa;">联系</a>
+                   	<a href="#">联系电话:020-3909 2980</a>
+                   	<a href="#">联系邮箱:myroots@126.com</a>
                    </li>
                    
                    
@@ -52,7 +52,7 @@
             </ul>
         </div>
         <div class="copyright">
-            <span>@2019族内myroots.All Rights Reserved &nbsp;&nbsp;粤ICP备15012185号<img src="__STATIC__/images/home/jing.png"/></span>
+            <span>@2019族内myroots.All Rights Reserved &nbsp;&nbsp;粤ICP备19055655号<img src="__STATIC__/images/home/jing.png"/></span>
             <p>大美基因科技(广东)有限公司</p>
             
             <!-- <p class="hao">{$web_setting.icp}</p> -->
