--- a/application/index/view/index/online_import_data.html
+++ b/application/index/view/index/online_import_data.html
@@ -200,13 +200,17 @@
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS635"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <!-- <ul class="xiala">
 							<li><input type="text" name="key[]" value="DYS635a"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
 							<li><input type="text" name="key[]" value="DYS635b"/></li>
 							<li><input type="text" name="value[]" /></li>
-                        </ul>
+                        </ul> -->
                         <ul class="xiala">
 							<li><input type="text" name="key[]" value="GATA_H4"/></li>
 							<li><input type="text" name="value[]" /></li>
