--- a/application/mobile/view/user/import_online.html
+++ b/application/mobile/view/user/import_online.html
@@ -168,13 +168,13 @@
                             <li><input type="text" name="gene[DYS627]" value='{:session("gene[DYS627]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
-                            <li>DYS635a</li>
-                            <li>DYS635b</li>
+                            <li>DYS635</li>
+                            <!-- <li>DYS635b</li> -->
                             <li>GATA_H4</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[DYS635a]" value='{:session("gene[DYS635a]","","mobile")}' /></li>
-                            <li><input type="text" name="gene[DYS635b]" value='{:session("gene[DYS635b]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[DYS635]" value='{:session("gene[DYS635a]","","mobile")}' /></li>
+                            <!-- <li><input type="text" name="gene[DYS635b]" value='{:session("gene[DYS635b]","","mobile")}' /></li> -->
                             <li><input type="text" name="gene[GATA_H4]" value='{:session("gene[GATA_H4]","","mobile")}' /></li>
                         </ul>
                         <!-- <ul class="xiala">
