大美基因科技注册更改

--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -65,7 +65,7 @@
 			            	</div>
 							<p style="text-align: center;padding-top: 10px;">请扫码登陆</p> -->
 							<!-- <div class="tips_ear"><span class="tip">注册即同意《23魔方服务协议》</span></div> -->
-							<div class="tips_ear"><a class="tip">注册即同意《<a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>》</a></div>
+							<div class="tips_ear"><a class="tip">微信登陆即同意《<a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>》《<a target="_blank" href="{:url('article/details','',false)}?id=31">隐私政策</a>》</a></div>
 						</li>
 			       </ul>
           </div>
