--- a/application/mobile/view/index/login.html
+++ b/application/mobile/view/index/login.html
@@ -89,7 +89,7 @@
 					<img class="the_third_party_icon" onclick="javascript:window.location.href='/mobile/index/wx_sign'" src="__STATIC__/img/public/we_chat_icon.png"/>
 				</p>
 				<p class="the_third_party_text">第三方登录</p>
-				
+				<p style="text-align: center;margin-top: 7px; color:#353535;">微信登陆即同意《服务协议》《隐私政策》</p>
 			</div>
         </div>
         
@@ -98,7 +98,6 @@
 		<script type="text/javascript" src="/public/static/public/layer/layer.js"></script>
 		<script src="__PUBLIC__/public/jquery.base64.js"></script>
 		<script>
-		
 
 			var re_email = /^[A-Za-z\d]+([-_.][A-Za-z\d]+)*@([A-Za-z\d]+[-.])+[A-Za-z\d]{2,4}$/;
 			var re_pass = /^([A-Za-z\d.]){6,20}$/;
