--- a/public/static/mobile/css/login/register.css
+++ b/public/static/mobile/css/login/register.css
@@ -91,7 +91,7 @@
 .code_box {
 	float: right;
 	width: 2.4rem;
-	height: 100%;
+	height: 100%;`
 }
 /*验证码 icon*/
 .loginCodeImg {
@@ -142,4 +142,14 @@
 	text-align: center;
 	border-radius: .07rem;
 	background-color: #37afe6;
+}
+.save-active{
+	background: #bdbdbd;
+}
+.ticp-cont{
+	margin: 10px 0 0 14px;
+}
+.ticp{
+	display: inline-block;
+	color:#999;
 }
