--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -33,7 +33,7 @@
                    	<a href="#">关于我们</a>
                    	<a href="#">加入我们</a>
                    	<a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>
-                   	<a href="#">顾问委员会</a>
+                   	<a target="_blank" href="{:url('article/details','',false)}?id=35">顾问委员会</a>
                    	<a target="_blank" href="{:url('article/details','',false)}?id=32">隐私保护</a>
                    </li>
                    <li>
