--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -58,7 +58,7 @@
 					<div class="resigter_submit" id="confirmSubmit" onclick="submit();">提交</div>
 					<div class="tips_ear">
 						<input class="b-checkbox" onchange="changSubmitType(this)" style="margin-top: 15px; margin-right:3px;" type="checkbox"  checked/>
-						<a style="width:auto;" class="tip" target="_blank" href="{:url('article/details','',false)}?id=31">注册即同意《服务协议》《隐私政策》</a>
+						注册即同意《<a style="width:auto;" class="tip" target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>》《<a style="width:auto;" class="tip" target="_blank" href="{:url('article/details','',false)}?id=32">隐私政策》</a>
 					</div>
 					<!--<div class="weixin_ear">
 
