--- a/application/index/view/article/details.html
+++ b/application/index/view/article/details.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	    <title>填写个人基本信息</title>
+	    <title>{$info.title}</title>
 	    <link rel="stylesheet" href="__STATIC__/css/public/public.css">
 	    <link rel="stylesheet" type="text/css" href="__STATIC__/css/home/information.css"/>
 	</head>
