--- a/application/mobile/view/index/login.html
+++ b/application/mobile/view/index/login.html
@@ -89,7 +89,7 @@
 					<img class="the_third_party_icon" onclick="javascript:window.location.href='/mobile/index/wx_sign'" src="__STATIC__/img/public/we_chat_icon.png"/>
 				</p>
 				<p class="the_third_party_text">第三方登录</p>
-				<p style="text-align: center;margin-top: 7px; color:#353535;">微信登陆即同意《服务协议》《隐私政策》</p>
+				<p style="text-align: center;margin-top: 7px; color:#353535;">微信登陆即同意《<a style="display: inline;" class="tip" target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>》《<a style="display: inline;" class="tip" target="_blank" href="{:url('article/details','',false)}?id=32">隐私政策</a>》</p>
 			</div>
         </div>
         
