--- a/application/mobile/view/index/register.html
+++ b/application/mobile/view/index/register.html
@@ -124,7 +124,7 @@
 
 			<div class="ticp-cont">
 				<input  class="b-checkbox" onclick="changSubmitType(this)" style=" vertical-align: middle;" type="checkbox"  checked/>
-				<a class="ticp" target="_blank" href="javascript:void(0);">注册即同意《服务协议》《隐私政策》</a>
+				<a class="ticp" target="_blank" href="javascript:void(0);">注册即同意《<a style="display: inline;" class="tip" target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>》《<a style="display: inline;" class="tip" target="_blank" href="{:url('article/details','',false)}?id=32">隐私政策</a>》</a>
 			</div>
 			
 
