--- a/application/mobile/view/article/details.html
+++ b/application/mobile/view/article/details.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no" />
-		<title>微解读详情</title>
+		<title>{$info.title}</title>
 		<script src="__STATIC__/js/public/rem.js"></script>
         <link rel="stylesheet" href="__STATIC__/css/public/public.css">
         <link rel="stylesheet" href="__STATIC__/css/public/public_head.css">
