注册送积分

--- a/application/admin/view/member/reg_jifen.html
+++ b/application/admin/view/member/reg_jifen.html
@@ -6,12 +6,18 @@
 	<form class="form form-horizontal" method="post" >
 		
 	<div class="row cl">
-		<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>注册送积分：</label>
+		<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>邀请的人得：</label>
 		<div class="formControls col-xs-8 col-sm-9">
 			<input type="text" class="input-text" name="jifen" value="{$info.jifen}" >
 		</div>
 	</div>
 	
+	<div class="row cl">
+		<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>注册的人得：</label>
+		<div class="formControls col-xs-8 col-sm-9">
+			<input type="text" class="input-text" name="reg_jifen" value="{$info.reg_jifen}" >
+		</div>
+	</div>
 
 	<div class="row cl">
 		<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
