大美基因科技轮播图更改

--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -1,5 +1,6 @@
 <style>
-.footer img{width:100px;height:100px;}
+.footer img{width:100px;height:100px; margin-right: 0;}
+
 </style>
 <div class="inner-wrap">
     <div class="left fl">
@@ -40,15 +41,7 @@
                    	<a href="#" style="color: #4bb4fa;">联系</a>
                    	<a href="#">联系电话:020-3909 2980</a>
                    	<a href="#">联系邮箱:myroots@126.com</a>
-                   </li>
-                   
-                   
-                   
-                   
-                   
-                   
-                   
-                  
+                   </li> 
             </ul>
         </div>
         <div class="copyright">
