--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -40,6 +40,9 @@
 						<div class="swiper-slide">
 							<img src="__STATIC__/img/home/banner3.jpg" />
 						</div>
+						<div class="swiper-slide">
+							<img src="__STATIC__/img/home/banner4.jpg" />
+						</div>
 					</div>
 					<!-- <div class="swiper-pagination"></div> -->
 				</div>
