--- a/application/mobile/view/user/import_online.html
+++ b/application/mobile/view/user/import_online.html
@@ -181,7 +181,7 @@
           </div> 
           <button id="confirmSubmit" class="save" type="submit" style="margin-left:35%;" >提交保存</button>
           <div>
-            <input  class="b-checkbox" onchange="changSubmitType(this)" style=" vertical-align: middle;" type="checkbox"  checked/> 是否公开个人信息
+            <input  class="b-checkbox" style=" vertical-align: middle;" type="checkbox"  checked/> 是否公开个人信息
             <p style=" margin: 10px 0;">基于寻根溯源的需要，族内鼓励选择公开，除非有特殊情况。选择不公开，则别人匹配出结果后将不能查看您的基本信息</p>
           </div>
           
@@ -193,16 +193,7 @@
         <script type="text/javascript" src="/public/static/public/layer/layer.js"></script>
 		<script>
 		
-        function changSubmitType(flag){
-            var stu =$(flag).is(":checked");
-            if(stu){
-                $('#confirmSubmit').attr('disabled',false);
-                $('#confirmSubmit').removeClass('save-active');
-            }else{
-                $('#confirmSubmit').attr('disabled',true);
-                $('#confirmSubmit').addClass('save-active');
-            }
-        }
+        
     	function error_msg(msg){
             layer.msg(msg,{icon:5});
         }
