数据基因弹框新增文字

--- a/application/mobile/view/user/import_online.html
+++ b/application/mobile/view/user/import_online.html
@@ -23,7 +23,7 @@
 			</div>
 			<!--表格-->
                 <p class="tip">
-                	填写说明：请认真填写并且检查数据信息。姓名和联系方式必填。没有的信息可不填。
+                    填写说明：请认真填写并且检查数据信息。姓名和联系方式必填。没有的信息可不填 DYS389b=DYS389II-DYS389I。
                 </p>
                 
                 <!--填写信息-->
