--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -27,7 +27,7 @@
                    	<a href="#">寻根故事</a>
                    	<a href="#">帮助中心</a>
                    	<a href="#">族内商城</a>
-                   	<a href="#">个人中心</a>
+                   	<a href="{:url('user/index')}">个人中心</a>
                    </li>
                    <li>
                    	<a href="#" style="color: #4bb4fa;">族内</a>
