--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -23,19 +23,19 @@
                     <li><a target="_blank" href="{:url('article/details','',false)}?id=32">隐私保护</a></li>-->
                    <li>
                    	<a href="#" style="color: #4bb4fa;">首页</a>
-                   	<a href="#">DNA寻祖</a>
-                   	<a href="#">寻根故事</a>
-                   	<a href="#">帮助中心</a>
-                   	<a href="#">族内商城</a>
-                   	<a href="#">个人中心</a>
+                   	<a href="/index/index/index">DNA寻祖</a>
+                   	<a href="/index/referral/referral">寻根故事</a>
+                   	<a href="{:url('article/details','',false)}?id=34">帮助中心</a>
+                   	<a href="/index/buy/buy">族内商城</a>
+                   	<a href="">个人中心</a>
                    </li>
                    <li>
                    	<a href="#" style="color: #4bb4fa;">族内</a>
-                   	<a href="#">关于我们</a>
+                   	<a href="/index/about/index">关于我们</a>
                    	<a href="#">加入我们</a>
                    	<a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>
                    	<a target="_blank" href="{:url('article/details','',false)}?id=35">顾问委员会</a>
-                   	<a target="_blank" href="{:url('article/details','',false)}?id=32">隐私保护</a>
+                   	<a target="_blank" href="{:url('article/details','',false)}?id=32">隐私声明</a>
                    </li>
                    <li>
                    	<a href="#" style="color: #4bb4fa;">联系</a>
