--- a/public/static/index/css/home/index.css
+++ b/public/static/index/css/home/index.css
@@ -9,11 +9,15 @@
     position: relative;
 }
 .swiper-container{
-    height:600px;
+    height:750px;
    
+}
+.swiper-container-horizontal > .swiper-pagination-bullets{
+	bottom:30px!important
 }
 .banner-wrap img{
     width: 100%;
+    height: 750px;
     display: block;
     margin-top:90px
 }
