--- a/public/static/index/css/register/register.css
+++ b/public/static/index/css/register/register.css
@@ -30,9 +30,13 @@
 	border-radius: 20px;
 	/*border: 1px solid green;*/
 	
-	
-	
-	
+}
+.ddss{
+	color: gray;
+	display: inline-block;
+	height: 40px;
+	line-height: 40px;
+	font-size: 14px;
 }
 .form1{
 	
