--- a/application/index/view/index/import_data.html
+++ b/application/index/view/index/import_data.html
@@ -156,6 +156,10 @@
            }
           
         }
+
+        function error(ts){
+            layer.msg(ts,{icon:5});
+        }
         </script>
 </body>
 </html>
