--- a/application/index/view/index/online_import_data.html
+++ b/application/index/view/index/online_import_data.html
@@ -17,7 +17,41 @@
     <div class="wrapper">
         <!-- 头部 -->
         <div class="header">{include file="header"}</div>
-       
+       <style>
+            .tishi{
+                position: fixed;left: 35%;top: 40%;
+                height:200px;
+                width:420px;
+                background-color:#e70012;
+                text-align:center;
+                font-size:24px;
+                z-index: 99;
+                border-radius: 10px;
+            }
+            .tishi .title{
+                
+                padding:20px;
+            }
+            .tishi .queren{
+                cursor: pointer;
+                padding: 10px;
+                margin: 15px auto;
+                width: 150px;
+                background-color: #55f175;
+                border-radius: 10px;
+            }
+
+            .bitian{
+                color:red !important;
+            }
+       </style>
+        <div class="tishi">
+            <div class="title">提示DYS389b=DYS389II-DYS389I<br />
+            红色基因座为必填选项！
+            </div>
+            <div class="queren">确认</div>
+        </div>
+
            <!-- 内容 -->
           <div class="content inner-wrap">
          
@@ -90,7 +124,75 @@
 							
 							<li>基因座/样本号</li>
 							<li>频度</li>
-						</ul>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS19"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS385a"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS385b"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS389a"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS389b"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS390"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS391"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS392"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS393"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS437"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS438"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS439"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS448"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS456"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS458"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="DYS635"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" class="bitian" name="key[]" value="GATA_H4"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
 						<ul class="xiala">
 							<li><input type="text" name="key[]" value="DYF387Sa"/></li>
 							<li><input type="text" name="value[]" /></li>
@@ -100,67 +202,7 @@
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS19"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS385a"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS385b"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS389a"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS389b"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS390"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS391"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS392"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS393"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS437"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS438"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS439"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS448"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
 							<li><input type="text" name="key[]" value="DYS449"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS456"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS458"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
@@ -168,7 +210,11 @@
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS481"/></li>
+							<li><input type="text" name="key[]" value="DYS481a"/></li>
+							<li><input type="text" name="value[]" /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><input type="text" name="key[]" value="DYS481b"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
@@ -176,11 +222,7 @@
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS527a"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS527b"/></li>
+							<li><input type="text" name="key[]" value="DYS527"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
                         <ul class="xiala">
@@ -199,46 +241,6 @@
 							<li><input type="text" name="key[]" value="DYS627"/></li>
 							<li><input type="text" name="value[]" /></li>
                         </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS635"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <!-- <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS635a"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS635b"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul> -->
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="GATA_H4"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <!-- <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS643"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS722"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS404S1a"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS404S1b"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS527a"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li><input type="text" name="key[]" value="DYS527b"/></li>
-							<li><input type="text" name="value[]" /></li>
-                        </ul> -->
                     </form>
 					</div>	
 				
@@ -262,6 +264,10 @@
     <script src="__STATIC__/js/public/selectDate.js"></script>
 	<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
     <script>
+        $('.queren').on('click',function(){
+            $('.tishi').hide();
+        })
+
     	$(".add").click(function(){
     		$(".l3h5d").append('<ul class="xiala"><li><input type="text" name="key[]" /></li><li><input type="text" name="value[]" /></li></ul>')
     	})
